Information about the FizzBuzz function added to part2 html document

--- a/part2/material/index.html
+++ b/part2/material/index.html
@@ -44,6 +44,8 @@
 			</div>
 		</code>
 
+		<p><i><b>Note!</b> The function can take more than one path if multiple conditions are true!</i></p>
+
 		<p>
 			You're going to have to build an API that will provide the results for this application.
 			The API should be written in TS-Node.
