--- a/part3/material/index.html
+++ b/part3/material/index.html
@@ -49,7 +49,7 @@
 
 		<p>
 			To get the special word, you're going to need to access the API at <a href="http://dev-test.madebywiser.com/part3/:x">http://dev-test.madebywiser.com/part3/:x</a>.
-			You will need to authenticate using <i>Basic</i> authentication and the credentials: 
+			You will need to authenticate using <i>Basic Authorization</i> and the credentials: 
 			<table class="w3-table" style="max-width:300px">
 				<tr>
 					<th>Username</th>
